--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>FidgetSpinner</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1,maximum-scale=1">
-        <meta name="description" content="A virtual Fidget Spinner. Because why the hell not?">
+        <meta name="description" content="A virtual Fidget Spinner. Because why not?">
         <link href="styles.css" media="all" rel="stylesheet">
     </head>
     <body>
