--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="everything">
             <div class="holder">
                 <div class="spinner">
-                    <img src="fidget.png">
+                    <img src="fidgetspinner_r.png">
                 </div>
                 <div class="handle"></div>
             </div>
