--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
             </div>
         </div>
         <script src="bundle.js"></script>
+        <script src="jquery.js"></script>
     </body>
 </html>
