--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="handle"></div>
             </div>
         </div>
-        <script src="main.js"></script>
+        <script src="bundle.js"></script>
         <script src="jquery.js"></script>
     </body>
 </html>
